--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.0.1",
+    "jest-cli": "^22.4.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
